2013-06-18  Roland Levillain  <roland@lrde.epita.fr>

	Mention bibtex2html and bib2bib as documentation build dependencies.

	* HACKING (Required Software): Here.

2013-06-18  Roland Levillain  <roland@lrde.epita.fr>

	Require bibtex2html 1.95 and bib2bib 1.95.

	* bootstrap: Here.
	(require): Accept complex command line patterns as third argument
	to handle bibtex2html's and bib2bib's ``--version'' option.

2013-06-18  Roland Levillain  <roland@lrde.epita.fr>

	Work around constraints of TeXLive's bibtex2html on Mac OS X.

	* doc/Makefile.am (lrde_olena.html): Here.

2013-06-14  Roland Levillain  <roland@lrde.epita.fr>

	Shell-related portability fixes in Olena's Makefiles.

	* doc/Makefile.am: Rewrite patterns ``perl X `find Y''' as
	``find Y -exec perl X {} \;'' to avoid long `perl' command lines and
	please the shell.

2013-06-17  Roland Levillain  <roland@lrde.epita.fr>

	Use `perl -pi' instead of `sed -i' in Olena.

	* build-aux/mln_add_file,
	* doc/Makefile.am,
	* lrde-scmstats.sh:
	Here, as `sed -i' (with no backup file) behaves differently on
	GNU/Linux and Mac OS X.  For more information, see:
	http://stackoverflow.com/questions/5694228/.

2013-04-18  Guillaume Lazzara  <z@lrde.epita.fr>

	Remove unstable viewer.

	* GScribo/BUGS,
	* GScribo/GScribo.pro,
	* GScribo/GScribo.pro.user,
	* GScribo/GScribo.pro.user.1.3,
	* GScribo/PagesWidget/pagesdelegate.cpp,
	* GScribo/PagesWidget/pagesdelegate.h,
	* GScribo/PagesWidget/pagesmodel.cpp,
	* GScribo/PagesWidget/pagesmodel.h,
	* GScribo/PagesWidget/pageswidget.cpp,
	* GScribo/PagesWidget/pageswidget.h,
	* GScribo/Preferences/generaloptions.cpp,
	* GScribo/Preferences/generaloptions.h,
	* GScribo/Preferences/generaloptions.ui,
	* GScribo/Preferences/ocroptions.cpp,
	* GScribo/Preferences/ocroptions.h,
	* GScribo/Preferences/ocroptions.ui,
	* GScribo/Preferences/optionwidget.h,
	* GScribo/Preferences/preferencesdialog.cpp,
	* GScribo/Preferences/preferencesdialog.h,
	* GScribo/Preferences/preferencesdialog.ui,