@@ -1,3 +1,11 @@
+2013-06-28  Roland Levillain  <roland@lrde.epita.fr>
+
+	Have configure find rst2html.
+
+	* configure.ac: Check for rst2html.
+	Define RST2HTML and use it...
+	* doc/Makefile.am (contributors.html): ...here.
+
 2013-06-18  Roland Levillain  <roland@lrde.epita.fr>
 
 	Mention bibtex2html and bib2bib as documentation build dependencies.
